tests/snapshots/examples_fixtures/errors__invalid_pattern_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/invalid_pattern_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E016]: INVALID PATTERN

Catch-all patterns must be the final match arm.

  --> examples/errors/invalid_pattern_error.flx:3:5
  |
3 |     _ -> 1,
  |     ^

Hint:
  Move `_` or the binding pattern to the last arm.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/errors/invalid_pattern_error.flx:6:1
  |
6 | print(x);
  | ^^^^^^^^^
  | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/errors/invalid_pattern_error.flx:6:1
  |
6 | print(x);
  | ^^^^^^^^^
  | --------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 3 errors.
== stdout ==
<not executed>
